# haskell-size

./: CHANGELOG.md  README.md  package.yaml  size.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.8.1/: package.cache  size-0.1.0.0-inplace.conf
src/: Size.hs
src/Size/: Internal.hs  Prim.hs  Unsafe.hs
src/Size/Internal/: Prim.hs
