cabal-version: 2.2

name:           size
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Qqwy/haskell-size#readme>
homepage:       https://github.com/Qqwy/haskell-size#readme
bug-reports:    https://github.com/Qqwy/haskell-size/issues
author:         Qqwy/Marten
maintainer:     qqwy@gmx.com
copyright:      2024 Qqwy/Marten
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/Qqwy/haskell-size

library
  exposed-modules:
      Size
      Size.Unsafe
  other-modules:
      Paths_size
      Size.Internal.Prim
      Size.Internal
  autogen-modules:
      Paths_size
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
  if flag(overflow-checks-always)
    CPP-Options: -DFORCE_CHECKED_MATH
  if flag(overflow-checks-never)
    CPP-Options: -DIGNORE_CHECKED_MATH

Flag overflow-checks-always
  Description: 
    Always enable the overflow/underflow checks on addition/subtraction/multiplication, even when building with optimizations. 
    Mutually exclusive with `overflow-checks-never`.
  Default:     False
  Manual:      True

Flag overflow-checks-never
  Description:
    Always disables the overflow/underflow checks on addition/subtraction/multiplication, even when building without optimizations.
    Mutually exclusive with `overflow-checks-always`.
  Default:     False
  Manual:      True

executable size-exe
  main-is: Main.hs
  other-modules:
      Paths_size
  autogen-modules:
      Paths_size
  hs-source-dirs:
      app
  ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , size
  default-language: Haskell2010

test-suite size-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_size
  autogen-modules:
      Paths_size
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , size
  default-language: Haskell2010
